Fix bugs, partially update reception api calls.
